# AinLanguage

./: .gitignore  CMakeLists.txt  ExpressionPrettyPrintTest.cpp  README.md  app.ain  app2.ain  debug-build.sh  files_cmake  files_cmake.cpp  files_cmake.out  run.sh
.cache/clangd/index/: AinException.hpp.5FA039DA69F2853D.idx  AinFile.cpp.B7310AB05F71C245.idx  AinFile.hpp.2CC3988CC370C851.idx  AinFileTest.cpp.2B943C939AC4E081.idx  AssignStatement.cpp.F7DF5F07EE176941.idx  AssignStatement.hpp.B2B1F07832D3D2C8.idx  BadFileFormatException.hpp.F6ECCD1E24496929.idx  BadToken.hpp.B97E8EF9E53B770E.idx  BaseParser.hpp.0EA9B237BE35B3CB.idx  (+270 more)
AinApp/: app.ain  newApp.ain  show.ain  student.ain
debug/: CMakeCache.txt  Makefile  ain  cmake_install.cmake
editor-support/: ain.lang  intellij-dracula.xml  text-x-ain.xml
include/: Interpreter.hpp  InterpreterV2.hpp  SharedPtrTypes.hpp  VarsOffsetSetter.hpp
include/ain_file/: AinFile.hpp  IAinFile.hpp  ain_file.hpp
include/exceptions/: AinException.hpp  BadFileFormatException.hpp  CharacterLiteralInvalidLengthException.hpp  ContainsKufrOrUnsupportedCharacterException.hpp  FileNotFoundException.hpp  FunctionNotFoundException.hpp  IllegalUnderscoreException.hpp  InvalidEscapeSequenceException.hpp  InvalidIdentifierNameException.hpp  InvalidLengthCharacterLiteralException.hpp  InvalidNumberSystemDigitException.hpp  InvalidUniversalCharacterCodeException.hpp  MainFunctionNotFoundException.hpp  MissingQouteException.hpp  OutOfRangeException.hpp  StringIsNotClosedException.hpp  UnsupportedTokenException.hpp  VariableNotFoundException.hpp
include/expression/: BinaryExpression.hpp  BoolExpression.hpp  CompareToExpression.hpp  EqualityExpression.hpp  FunCallExpression.hpp  FunInvokeExpression.hpp  IExpression.hpp  IOldExpression.hpp  IncDecExpression.hpp  LiteralExpression.hpp  LogicalExpression.hpp  NewArrayExpression.hpp  NewObjectExpression.hpp  NonStaticFunInvokeExpression.hpp  NonStaticVarAccessExpression.hpp  NumberExpression.hpp  OldVariableAccessExpression.hpp  OperatorFunInvokeExpression.hpp  SetOperatorExpression.hpp  StringExpression.hpp  ThisExpression.hpp  ThisFunInvokeExpression.hpp  ThisVarAccessExpression.hpp  UnitExpression.hpp  VarAccessExpression.hpp  VariableAccessExpression.hpp
include/helpers/: LinkedList.hpp  LinkedListNode.hpp  ainio.hpp  ainprint.hpp  number_helper.hpp  string_helper.hpp  wchar_t_helper.hpp
include/lexer/: BadToken.hpp  EOFToken.hpp  ILexer.hpp  ILexerLine.hpp  KeywordToken.hpp  Lexer.hpp  LexerLine.hpp  LexerToken.hpp  LiteralToken.hpp  NumberToken.hpp  SymbolToken.hpp  keywordtoken.hpp  lexer.hpp  lexerline.hpp  lexertoken.hpp  symboltoken.hpp
include/parser/: BaseParser.hpp  ClassParser.hpp  ExpressionParser.hpp  FileParser.hpp  FunParser.hpp  IParser.hpp  OldParser.hpp  PackageParser.hpp  Parser.hpp  ParserProvidersAliases.hpp  StmListParser.hpp  TokensIterator.hpp  VarStatementParser.hpp  expression.hpp  parser.hpp
include/scope/: BaseScope.hpp  ClassScope.hpp  Constant.hpp  ConstructorScope.hpp  FileScope.hpp  FunScope.hpp  GlobalScope.hpp  LoopScope.hpp  OldConstant.hpp  OldFunScope.hpp  OldVariable.hpp  PackageScope.hpp  Scope.hpp  StmListScope.hpp  Variable.hpp
include/semantics/: ImplicitVarTypeChecker.hpp  SemanticsChecksVisitor.hpp  TypeChecker.hpp
include/statement/: AssignStatement.hpp  AugmentedAssignStatement.hpp  BreakStatement.hpp  ContinueStatement.hpp  DoWhileStatement.hpp  ExpressionStatement.hpp  IOldStatement.hpp  IStatement.hpp  IfStatement.hpp  ReturnStatement.hpp  VarDeclarationStatement.hpp  VarReassignStatement.hpp  VarStm.hpp  WhileStatement.hpp  statement.hpp
src/: Interpreter.cpp  InterpreterV2.cpp  VarsOffsetSetter.cpp  app copy.ain  app.ain  app_copy.ain  main  main.cpp
src/ain_file/: AinFile.cpp  ain_file  ain_file.cpp
src/expression/: BinaryExpression.cpp  BoolExpression.cpp  CompareToExpression.cpp  EqualityExpression.cpp  FunCallExpression.cpp  FunInvokeExpression.cpp  IExpression.cpp  IncDecExpression.cpp  LiteralExpression.cpp  LogicalExpression.cpp  NewArrayExpression.cpp  NewObjectExpression.cpp  NonStaticFunInvokeExpression.cpp  NonStaticVarAccessExpression.cpp  NumberExpression.cpp  OperatorFunInvokeExpression.cpp  SetOperatorExpression.cpp  StringExpression.cpp  ThisExpression.cpp  ThisFunInvokeExpression.cpp  ThisVarAccessExpression.cpp  UnitExpression.cpp  VarAccessExpression.cpp  VariableAccessExpression.cpp
src/helpers/: ainio.cpp  ainprint.cpp  number_helper.cpp  string_helper.cpp  wchar_t_helper.cpp
src/lexer/: KeywordToken.cpp  Lexer.cpp  LexerLine.cpp  LexerToken.cpp  LiteralToken.cpp  NumberToken.cpp  SymbolToken.cpp  keywordtoken.cpp  lexer.cpp  lexerline.cpp  lexertoken.cpp  symboltoken  symboltoken.cpp
src/parser/: .ExpressionParser.cpp.swp  ASTNode.cpp  ASTVisitor.cpp  ClassParser.cpp  ExpressionParser.cpp  FileParser.cpp  FunParser.cpp  OldParser.cpp  PackageParser.cpp  Parser.cpp  StmListParser.cpp  TokensIterator.cpp  VarStatementParser.cpp  expression  expression.cpp  parser  parser.cpp
src/scope/: ArrayClassScope.cpp  BaseScope.cpp  ClassScope.cpp  Constant.cpp  ConstructorScope.cpp  FileScope.cpp  FunScope.cpp  GlobalScope.cpp  LoopScope.cpp  OldConstant.cpp  OldFunScope.cpp  OldVariable.cpp  PackageScope.cpp  Scope.cpp  StmListScope.cpp  StringClassScope.cpp  Variable.cpp
src/semantics/: ImplicitVarTypeChecker.cpp  SemanticsChecksVisitor.cpp  TypeChecker.cpp
src/statement/: AssignStatement.cpp  AugmentedAssignStatement.cpp  BreakStatement.cpp  ContinueStatement.cpp  DoWhileStatement.cpp  ExpressionStatement.cpp  IOldStatement.cpp  IStatement.cpp  IfStatement.cpp  ReturnStatement.cpp  VarDeclarationStatement.cpp  VarReassignStatement.cpp  VarStm.cpp  WhileStatement.cpp  statement  statement.cpp
test/: test.cpp  test2.cpp
test/ain_file/: AinFileTest.cpp  testPass.ain
test/lexer/: LexerLineTest.cpp  LexerTest.cpp  lexertest.cpp
test/parser/: FileParserTest.cpp  FunParserTest.cpp  PackageParserTest.cpp  TokensIteratorForTests.cpp  TokensIteratorTest.cpp
testInclude/: StringMaker.hpp  TokensIteratorForTests.hpp
(+113 files in other folders)
